--- a/index.html
+++ b/index.html
@@ -18,34 +18,34 @@
     </header>
     <div class="container">
         <div class="col co1-1">
-            <img src="./images/game-1.jpg" alt="game1">
+            <img class="grid-images" src="./images/game-1.jpg" alt="game1">
         </div>
         <div class="col co1-2">
-            <img src="./images/game-2.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-2.jpg" alt="game-pic">
         </div>
         <div class="col co1-3">
-            <img src="./images/game-3.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-3.jpg" alt="game-pic">
         </div>
         <div class="col co1-4">
-            <img src="./images/game-4.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-4.jpg" alt="game-pic">
         </div>
         <div class="col co1-5">
-            <img src="./images/game-5.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-5.jpg" alt="game-pic">
         </div>
         <div class="col co1-6">
-            <img src="./images/game-2.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-2.jpg" alt="game-pic">
         </div>
         <div class="col co1-7">
-            <img src="./images/game-1.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-1.jpg" alt="game-pic">
         </div>
         <div class="col co1-8">
-            <img src="./images/game-5.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-5.jpg" alt="game-pic">
         </div>
         <div class="col co1-9">
-            <img src="./images/game-1.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-1.jpg" alt="game-pic">
         </div>
         <div class="col co1-10">
-            <img src="./images/game-3.jpg" alt="game-pic">
+            <img class="grid-images" src="./images/game-3.jpg" alt="game-pic">
         </div>
     </div>
     <footer>
